# project-brain

./: .gitignore  LICENSE  README.md  brain.yaml  mainbrain.yaml  pyproject.toml
.brainmain/: data.json
.brainmain/cache/: test.json
.brainmain/exports/: code_changes.txt  full_code.txt
src/project_brain/: cli.py
src/project_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/project_brain/core/: analyzer.py  config_loader.py  differ.py  doctor.py  explainer.py  explainer_file.py  exporter.py  logger.py  results.py  summarizer.py
src/project_brain/llm/: provider.py
src/project_brain/storage/: storage.py
