[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-brain"
version = "0.1.0"
description = "CLI-first developer intelligence tool"
authors = [
    { name = "Srujan Amaragatti" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "PyYAML",
    "requests"
]

[project.scripts]
project-brain = "project_brain.cli:main"
brain = "project_brain.cli:main"

[tool.setuptools.packages.find]
where = ["src"]